--- a/learning/courses/utility-scale-quantum-computing/lesson-07-quantum-simulation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-07-quantum-simulation.ipynb
@@ -101,9 +101,9 @@
     "\n",
     "Before starting this tutorial, be sure you have the following installed:\n",
     "\n",
-    "- Qiskit SDK 1.2 or later ( pip install qiskit )\n",
-    "- Qiskit Runtime 0.30 or later ( pip install qiskit-ibm-runtime )\n",
-    "- Numpy 1.24.1 or later < 2 ( pip install numpy )"
+    "- Qiskit SDK v1.2 or later ( `pip install qiskit` )\n",
+    "- Qiskit Runtime v0.30 or later ( `pip install qiskit-ibm-runtime` )\n",
+    "- Numpy v1.24.1 or later < 2 ( `pip install numpy` )"
    ]
   },
   {
@@ -181,7 +181,7 @@
     "\n",
     "We here consider the 1-D transverse-field Ising model.\n",
     "\n",
-    "First, we will create a function that takes in the system parameters $N$, $J$, $h$ and $\\alpha$, and returns our Hamiltonian as a `SparsePauliOp`. A [SparsePauliOp](https://docs.quantum.ibm.com/api/qiskit/qiskit.quantum_info.SparsePauliOp) is a sparse representation of an operator in terms of weighted [Pauli](https://docs.quantum.ibm.com/api/qiskit/qiskit.quantum_info.Pauli) terms."
+    "First, we will create a function that takes in the system parameters $N$, $J$, $h$ and $\\alpha$, and returns our Hamiltonian as a `SparsePauliOp`. A [SparsePauliOp](/docs/api/qiskit/qiskit.quantum_info.SparsePauliOp) is a sparse representation of an operator in terms of weighted [Pauli](/docs/api/qiskit/qiskit.quantum_info.Pauli) terms."
    ]
   },
   {
@@ -549,7 +549,7 @@
     "## 3. Exercise 1. Perform simulation using second-order Suzuki–Trotter\n",
     "Now let's try performing simulation with second-order Suzuki–Trotter following the example of Lie–Trotter shown above.\n",
     "\n",
-    "The second-order Suzuki-Trotter can be used in Qiskit by means of the [SuzukiTrotter class](https://docs.quantum.ibm.com/api/qiskit/qiskit.synthesis.SuzukiTrotter). Using this formula, a second order decomposition is:\n",
+    "The second-order Suzuki-Trotter can be used in Qiskit by means of the [SuzukiTrotter class](/docs/api/qiskit/qiskit.synthesis.SuzukiTrotter). Using this formula, a second order decomposition is:\n",
     "\n",
     "$$\n",
     "e^{H_1+H_2} \\approx e^{H_1/2}e^{H_2}e^{H_1/2}\n",
@@ -748,7 +748,7 @@
    "metadata": {},
    "source": [
     "### 3.4 Compare with exact results\n",
-    "The data below is the precomputed exact results from classical computer"
+    "The data below is the precomputed exact results from the classical computer."
    ]
   },
   {
@@ -1418,7 +1418,7 @@
     }
    ],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_cloud\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "backend.name"
    ]
@@ -1588,7 +1588,7 @@
     "We here show an example for constructing a circuit using higher-order (fourth-order) Suzuki–Trotter.\n",
     "Now let's try constructing a circuit simulation with fourth-order Suzuki–Trotter following the examples shown above.\n",
     "\n",
-    "The fourth-order Suzuki–Trotter can be used in Qiskit by means of the [SuzukiTrotter class](https://docs.quantum.ibm.com/api/qiskit/qiskit.synthesis.SuzukiTrotter). The fourth-order can be evaluated using the following recursion relation. Note that the order of Suzuki–Trotter is denoted as \"2k\" in the following equations.\n",
+    "The fourth-order Suzuki–Trotter can be used in Qiskit by means of the [SuzukiTrotter class](/docs/api/qiskit/qiskit.synthesis.SuzukiTrotter). The fourth-order can be evaluated using the following recursion relation. Note that the order of Suzuki–Trotter is denoted as \"2k\" in the following equations.\n",
     "\n",
     "$$\n",
     "\\hat{U}_{ST(2k)}\\left(t\\right) = \\left[ \\hat{U}_{ST(2k-2)}\\left(p_k t\\right) \\right]^2 \\hat{U}_{ST(2k-2)}\\left( (1- 4 p_k) t\\right)\\left[ \\hat{U}_{ST(2k-2)}\\left(p_k t\\right) \\right]^2\n",
