--- a/learning/courses/utility-scale-quantum-computing/lesson-11-error-mitigation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-11-error-mitigation.ipynb
@@ -11,7 +11,6 @@
     "<Admonition type=\"note\">\n",
     "\n",
     "Toshinari Itoko (June 28, 2024)\n",
-    "© IBM Corp. 2024\n",
     "\n",
     "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
     "\n",
@@ -511,8 +510,7 @@
     "from qiskit_aer import AerSimulator\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler, QiskitRuntimeService\n",
     "\n",
-    "channel = \"ibm_cloud\"\n",
-    "service = QiskitRuntimeService(channel=channel)\n",
+    "service = QiskitRuntimeService()\n",
     "real_backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")  # Eagle"
@@ -752,7 +750,7 @@
    "source": [
     "### 3.3 Execute using Estimator (with different resilience levels)\n",
     "\n",
-    "Setting the resilienece level (`estimator.options.resilience_level`) is the easiest way to apply error mitigation when using Qiskit Estimator. Estimator supports the following resilience levels (as of 2024/06/28). Check https://docs.quantum.ibm.com/guides/configure-error-mitigation for the details.\n",
+    "Setting the resilienece level (`estimator.options.resilience_level`) is the easiest way to apply error mitigation when using Qiskit Estimator. Estimator supports the following resilience levels (as of 2024/06/28). See more details in the [Configure error mitigation](/docs/guides/configure-error-mitigation) guide.\n",
     "\n",
     "![image.png](/learning/images/courses/utility-scale-quantum-computing/lesson-11-error-mitigation/res_level.avif)"
    ]
