--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -93,9 +93,11 @@
     "        ]\n",
     "        # Add a multi-controlled Z-gate with pre- and post-applied X-gates (open-controls)\n",
     "        # where the target bit-string has a '0' entry\n",
-    "        qc.x(zero_inds)\n",
+    "        if zero_inds:\n",
+    "            qc.x(zero_inds)\n",
     "        qc.compose(MCMTGate(ZGate(), num_qubits - 1, 1), inplace=True)\n",
-    "        qc.x(zero_inds)\n",
+    "        if zero_inds:\n",
+    "            qc.x(zero_inds)\n",
     "    return qc"
    ]
   },
