--- a/learning/courses/utility-scale-quantum-computing/lesson-07-quantum-simulation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-07-quantum-simulation.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "*Approximate QPU time to run this experiment is 7 seconds.*\n",
     "\n",
-    "(This notebook is mostly taken from [a tutorial notebook](https://github.com/qiskit-community/qiskit-algorithms/blob/main/docs/tutorials/13_trotterQRTE.ipynb) for Qiskit Algorithms.)\n",
+    "(This notebook is mostly taken from a now-deprecated [tutorial notebook](https://github.com/qiskit-community/qiskit-algorithms/blob/main/docs/tutorials/13_trotterQRTE.ipynb) for Qiskit Algorithms.)\n",
     "\n",
     "</Admonition>"
    ]
