--- a/learning/courses/utility-scale-quantum-computing/lesson-13-utility-ii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-13-utility-ii.ipynb
@@ -10,13 +10,12 @@
     "<Admonition type=\"note\">\n",
     "\n",
     "Yukio Kawashima (July 12, 2024)\n",
-    "© IBM Corp. 2024\n",
     "\n",
     "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 2 m 30 s.*\n",
     "\n",
-    "(Note that this notebook used texts, illustration, and codes in [a tutorial notebook](https://github.com/qiskit-community/qiskit-algorithms/blob/main/docs/tutorials/13_trotterQRTE.ipynb) for Qiskit Algorithms.)\n",
+    "(Note that this notebook used texts, illustration, and codes from a now-deprecated [tutorial notebook](https://github.com/qiskit-community/qiskit-algorithms/blob/main/docs/tutorials/13_trotterQRTE.ipynb) for Qiskit Algorithms.)\n",
     "\n",
     "</Admonition>"
    ]
@@ -152,9 +151,9 @@
    "source": [
     "## 2. Defining the transverse-field Ising Hamiltonian\n",
     "\n",
-    "We here consider the 1-D transverse-field Ising model\n",
+    "We here consider the 1-D transverse-field Ising model.\n",
     "\n",
-    "First, we will create a function that takes in the system parameters $N$, $J$, and $h$, and returns our Hamiltonian as a `SparsePauliOp`. A [SparsePauliOp](https://docs.quantum.ibm.com/api/qiskit/qiskit.quantum_info.SparsePauliOp) is a sparse representation of an operator in terms of weighted [Pauli](https://docs.quantum.ibm.com/api/qiskit/qiskit.quantum_info.Pauli) terms."
+    "First, we will create a function that takes in the system parameters $N$, $J$, and $h$, and returns our Hamiltonian as a `SparsePauliOp`. A [SparsePauliOp](/docs/api/qiskit/qiskit.quantum_info.SparsePauliOp) is a sparse representation of an operator in terms of weighted [Pauli](/docs/api/qiskit/qiskit.quantum_info.Pauli) terms."
    ]
   },
   {
@@ -296,7 +295,7 @@
    "source": [
     "#### Prepare the quantum circuit 2 (Single circuit for time evolution)\n",
     "We here construct a circuit for a single time step using Lie–Trotter.\n",
-    "The Lie product formula (first order) is implemented in the [LieTrotter](https://docs.quantum.ibm.com/api/qiskit/qiskit.synthesis.LieTrotter) class. A first order formula consists of the approximation stated in the introduction, where the matrix exponential of a sum is approximated by a product of matrix exponentials:\n",
+    "The Lie product formula (first order) is implemented in the [LieTrotter](/docs/api/qiskit/qiskit.synthesis.LieTrotter) class. A first-order formula consists of the approximation stated in the introduction, where the matrix exponential of a sum is approximated by a product of matrix exponentials:\n",
     "\n",
     "$$\n",
     "e^{H_1+H_2} \\approx e^{H_1} e^{H_2}\n",
@@ -665,7 +664,7 @@
     "\n",
     "#### Prepare the quantum circuit 2 (Single circuit for time evolution) for the 70-qubit problem\n",
     "We here construct a circuit for a single time step using Lie–Trotter.\n",
-    "Exactly as in the 20-qubit case, the Lie product formula (first order) is implemented in the [LieTrotter](https://docs.quantum.ibm.com/api/qiskit/qiskit.synthesis.LieTrotter) class. Again the first order formula consists of the approximation stated above:\n",
+    "Exactly as in the 20-qubit case, the Lie product formula (first order) is implemented in the [LieTrotter](/docs/api/qiskit/qiskit.synthesis.LieTrotter) class. Again, the first-order formula consists of the approximation stated above:\n",
     "\n",
     "$$\n",
     "e^{H_1+H_2} \\approx e^{H_1} e^{H_2}\n",
@@ -1274,7 +1273,7 @@
    "id": "7f32a06a-2974-4f22-9dbe-d2ec6143f3cf",
    "metadata": {},
    "source": [
-    "### 3.4 Step 4. Postprocessing\n",
+    "### 3.4 Step 4. Post-processing\n",
     "Extract the expectation values from the results."
    ]
   },
