--- a/learning/courses/utility-scale-quantum-computing/lesson-14-utility-iii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-14-utility-iii.ipynb
@@ -9,14 +9,13 @@
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "Toshinari Itoko, Tamiya Onodera, Kifumi Numata (July 19, 2024)\n",
-    "© IBM Corp. 2024\n",
+    "Toshinari Itoko, Tamiya Onodera, Kifumi Numata (19 July 2024)\n",
     "\n",
     "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this first experiment is 12 m 30 s. There is an additional experiment below that requires approximately 4 m.*\n",
     "\n",
-    "(Note: this notebook may not evaluate in the time allowed on the open plan. Please use quantum computing resources wisely.)\n",
+    "(Note: this notebook may not evaluate in the time allowed on the Open Plan. Please use quantum computing resources wisely.)\n",
     "\n",
     "</Admonition>"
    ]
@@ -477,7 +476,7 @@
    "id": "997d7bc9",
    "metadata": {},
    "source": [
-    "We are going to build a circuit involving many two-qubit gates. It makes sense for us to use the qubits that have the lowest errors when implementing those two-qubit gates. Finding the best \"qubit chain\" based on the reported 2q-gate errors is a not-trivial problem. But we can define a few functions to help us determine the best qubits to use."
+    "We are going to build a circuit involving many two-qubit gates. It makes sense for us to use the qubits that have the lowest errors when implementing those two-qubit gates. Finding the best \"qubit chain\" based on the reported 2q-gate errors is a nontrivial problem. But we can define a few functions to help us determine the best qubits to use."
    ]
   },
   {
@@ -1010,7 +1009,7 @@
    "id": "5245dbee-e0fa-485d-a0fc-ce72b2739ccd",
    "metadata": {},
    "source": [
-    "We try to create a 16 qubit GHZ state as before."
+    "We try to create a 16-qubit GHZ state as before."
    ]
   },
   {
@@ -1388,7 +1387,7 @@
    "id": "40bc77d5-be60-4360-9750-31d0f1459ab0",
    "metadata": {},
    "source": [
-    "Now, let us try to create a larger GHZ state, that is a 30-qubit GHZ state."
+    "Now, let us try to create a larger GHZ state: a 30-qubit GHZ state."
    ]
   },
   {
@@ -1398,7 +1397,7 @@
    "source": [
     "### 3.1 N = 30\n",
     "\n",
-    "We will follow the [Qiskit Patterns](https://docs.quantum.ibm.com/guides/intro-to-patterns).\n",
+    "We will follow the [Qiskit patterns](/docs/guides/intro-to-patterns) framework.\n",
     "\n",
     "- Step 1: Map problem to quantum circuits and operators\n",
     "- Step 2: Optimize for target hardware\n",
@@ -1918,7 +1917,7 @@
    "id": "2c40dc0f-93a0-4fae-980f-b7c5ab449a40",
    "metadata": {},
    "source": [
-    "You can set the error suppression options in Sampler V2. Please refer https://docs.quantum.ibm.com/guides/configure-error-mitigation#advanced-error, and https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.options.ExecutionOptionsV2"
+    "You can set the error suppression options in Sampler V2. Refer to the [Configure error mitigation](/docs/guides/configure-error-mitigation#advanced-error) guide and the [`ExecutionOptionsV2`](/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.options.ExecutionOptionsV2) API reference for more information."
    ]
   },
   {
@@ -2044,7 +2043,7 @@
    "id": "70b460c8",
    "metadata": {},
    "source": [
-    "## 5. Your goal (Recap)\n",
+    "## 5. Your goal (recap)\n",
     "\n",
     "Build a GHZ circuit for 20 qubits or more so that the measurement result meets the criteria: The fidelity of your GHZ state > 0.5.\n",
     "\n",
@@ -2484,7 +2483,7 @@
    "id": "c817f572-1c67-4ed8-b466-ecdf5c41d88b",
    "metadata": {},
    "source": [
-    "Congratulations! You have completed your introduction to utility-scale quantum computing! You are now poised to make meaningful contributions along the quest for quantum advantage! Thank you for making IBM Quantum part of your personal quantum journey."
+    "Congratulations! You have completed your introduction to utility-scale quantum computing! You are now poised to make meaningful contributions in the quest for quantum advantage! Thank you for making IBM Quantum&reg; part of your personal quantum journey."
    ]
   }
  ],
