--- a/learning/courses/utility-scale-quantum-computing/lesson-14-utility-iii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-14-utility-iii.ipynb
@@ -1917,7 +1917,7 @@
    "id": "2c40dc0f-93a0-4fae-980f-b7c5ab449a40",
    "metadata": {},
    "source": [
-    "You can set the error suppression options in Sampler V2. Refer to the [Configure error mitigation](/docs/guides/configure-error-mitigation#advanced-error) guide and the [`ExecutionOptionsV2`](/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.options.ExecutionOptionsV2) API reference for more information."
+    "You can set the error suppression options in Sampler V2. Refer to the [Configure error mitigation](/docs/guides/configure-error-mitigation#advanced-error) guide and the [`ExecutionOptionsV2`](/docs/api/qiskit-ibm-runtime/options-execution-options-v2) API reference for more information."
    ]
   },
   {
