--- a/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "Kento Ueda (May 15, 2024)\n",
+    "Kento Ueda (15 May 2024)\n",
     "\n",
     "This notebook provides the fundamental concepts and implementation of the Quantum Fourier Transformation (QFT) and Quantum Phase Estimation (QPE).\n",
     "\n",
-    "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
+    "PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 7 seconds.*\n",
     "\n",
@@ -105,9 +105,7 @@
     "\n",
     "The quantum Fourier transform (QFT) transforms between two bases, the computational (Z) basis, and the Fourier basis. But what does the Fourier basis mean in this context? You likely recall that the Fourier transform $F(\\omega)$ of a function $f(x)$ describes the convolution of $f(x)$ onto a sinusoidal function with frequency $\\omega$. In Layman's terms: the Fourier transform is a function describing how much of each frequency $\\omega$ we would need to build up a function $f(x)$ out of sine functions (or cosine functions). To get a better sense for what the QFT means in this context, consider the stepped images below which show a number encoded in binary, using four qubits:\n",
     "\n",
-    "In the computational basis, we store numbers in binary using the states $|0\\rangle$ and $|1\\rangle$:\n",
-    "\n",
-    "![zbasis-counting.gif](https://learning-api.quantum.ibm.com/assets/3e5218f9-5abd-4d7b-8637-a3de773aa7cd?format=auto&quality=80)\n",
+    "In the computational basis, we store numbers in binary using the states $|0\\rangle$ and $|1\\rangle$.\n",
     "\n",
     "Note the frequency with which the different qubits change; the leftmost qubit flips with every increment in the number, the next with every 2 increments, the third with every 4 increments, and so on.\n",
     "\n",
@@ -122,9 +120,7 @@
     "\n",
     "(We often denote states in the Fourier basis using the tilde (~)).\n",
     "\n",
-    "In the Fourier basis, we store numbers using different rotations around the Z-axis:\n",
-    "\n",
-    "![fourierbasis-counting.gif](https://learning-api.quantum.ibm.com/assets/aac18049-a467-4822-947d-cdca57ad8f31?format=auto&quality=80)\n",
+    "In the Fourier basis, we store numbers using different rotations around the Z-axis.\n",
     "\n",
     "The number we want to store dictates the angle at which each qubit is rotated around the Z-axis. In the state $|\\widetilde{0}\\rangle$, all qubits are in the state $|{+}\\rangle$. As seen in the example above, to encode the state $|\\widetilde{5}\\rangle$ on 4 qubits, we rotated the leftmost qubit by $\\tfrac{5}{2^n} = \\tfrac{5}{16}$ full turns ($\\tfrac{5}{16}\\times 2\\pi$ radians). The next qubit is turned double this ($\\tfrac{10}{16}\\times 2\\pi$ radians, or $10/16$ full turns), this angle is then doubled for the qubit after, and so on.\n",
     "\n",
