remove zip file mentions

--- a/learning/courses/utility-scale-quantum-computing/hardware.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/hardware.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "Masao Tokunari and Tamiya Onodera (June 14, 2024)\n",
+    "Masao Tokunari and Tamiya Onodera (14 June 2024)\n",
+    "\n",
+    " This course is based on a live course delivered at the University of Tokyo. PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "</Admonition>"
    ]
@@ -21,9 +23,7 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "This lesson explores modern quantum computing hardware. It is based on a live course delivered at the University of Tokyo. The pdf of the original lecture has been split into two parts. Click [here](https://learning-api.quantum.ibm.com/assets/5e3db3cf-849f-4416-b2f3-c0a664b24eff) to download the first part; click [here](https://learning-api.quantum.ibm.com/assets/34dba1aa-c136-4ecd-8c6b-3f0cfad7d8c6) to download the second.\n",
-    "\n",
-    "A Jupyter notebook containing this lesson can be downloaded [here](https://learning-api.quantum.ibm.com/assets/a97a9e24-28c6-4a88-93ae-e25385e7e3f5).\n",
+    "This lesson explores modern quantum computing hardware.\n",
     "\n",
     "We will start by verifying some versions and importing some relevant packages."
    ]
