--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "<iframe width=\"690\" height=\"390\" src=\"https://video.ibm.com/embed/recorded/132414916\"></iframe>\n",
     "\n",
-    "**References**\n",
+    "### References\n",
     "\n",
     "- [A Comparison of Various Classical Optimizers for a Variational Quantum Linear Solver, Pellow-Jarman, et al.](https://arxiv.org/pdf/2106.08682.pdf)\n",
     "- [The Variational Quantum Eigensolver: A review of methods and best practices, Tilly, et al.](https://arxiv.org/abs/2111.05176)\n",
