Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "### References\n",
     "\n",
+	    "The following articles are referenced in the above video.\n",
     "- [A Comparison of Various Classical Optimizers for a Variational Quantum Linear Solver, Pellow-Jarman, et al.](https://arxiv.org/pdf/2106.08682.pdf)\n",
     "- [The Variational Quantum Eigensolver: A review of methods and best practices, Tilly, et al.](https://arxiv.org/abs/2111.05176)\n",
     "- [Quantum computational chemistry, McArdle, et al.](https://arxiv.org/pdf/1808.10402.pdf)\n",
@@ -34,15 +35,15 @@
    "source": [
     "## Coding a classical optimizer\n",
     "\n",
-    "In the previous lessons you learned to make a Hamiltonian suitable for use on a quantum computer, and learned how to make a variational circuit. You also learned that the variational circuit (or ansatz) contains parameters to be varied, and the optimal choice of parameters is what yields the lowest possible cost function or energy. Thus our problem is reduced to searching parameter space for the optimal set. Most of the work in classical optimizers has been done for us, as excellent optimizers are available from any number of sources.\n",
+    "In the previous lessons, you learned to make a Hamiltonian suitable for use on a quantum computer and how to make a variational circuit. You also learned that the variational circuit (or ansatz) contains parameters to be varied, and the optimal choice of parameters is whatever yields the lowest possible cost function or energy. Thus, our problem is reduced to searching the  parameter space for the optimal set. Most of the work in classical optimizers has been done for us, as excellent optimizers are available from several sources.\n",
     "\n",
-    "In this lesson you will learn\n",
-    "- how classical optimizers fit into a VQE calculation\n",
-    "- what classical optimizers are available from SciPy\n",
-    "- what optimizers are __not__ yet available through SciPy and how to supplement in the meantime using qiskit.algorithms\n",
-    "- what options are available for these optimizers and the significance for quantum computing\n",
+    "In this lesson you will learn:\n",
+    "- How classical optimizers fit into a VQE calculation\n",
+    "- What classical optimizers are available from SciPy\n",
+    "- What optimizers are __not__ yet available through SciPy and how to supplement in the meantime using `qiskit.algorithms`\n",
+    "- What options are available for these optimizers and the significance for quantum computing\n",
     "\n",
-    "[SciPy](https://scipy.org/) is a free, open-source Python library with packages relevant to many areas of scientific computing, optimization among them. In particular, SciPy has an optimization package that includes [minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html):\n",
+    "[SciPy](https://scipy.org/) is a free, open-source Python library with packages relevant to many areas of scientific computing, including optimization. In particular, SciPy has an optimization package that includes [minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html):\n",
     "\n",
     "```from scipy.optimize import minimize```"
    ]
@@ -52,14 +53,14 @@
    "id": "5f8afd6d-5596-46e3-b5fc-de282d0b53f0",
    "metadata": {},
    "source": [
-    "This minimize function has several arguments, and in the context of quantum chemistry, they will be\n",
-    "- the cost function (cost_func). This is related to the Hamiltonian, but also includes some complexities such as the determination of the expectation value using Estimator, and in the case of excited state calculations may include orthogonality conditions.\n",
-    "- an initial state (x0) for the system, often the Hartree Fock state\n",
-    "- other arguments, including arguments of the cost function itself\n",
-    "- the method set to the classical optimizer you select\n",
-    "- options for the classical optimizer (not to be confused with Session options discussed in the next section)\n",
+    "This minimize function has several arguments, but the most relevant arguments for quantum chemistry are: \n",
+    "- The cost function (`cost_func`). This is related to the Hamiltonian, but also includes some complexities, such as determining the expectation value by using Estimator, and in the case of excited state calculations, might include orthogonality conditions.\n",
+    "- An initial state (x0) for the system, often the Hartree Fock state\n",
+    "- Other arguments, including arguments of the cost function itself\n",
+    "- The method set to the classical optimizer you select\n",
+    "- Options for the classical optimizer (not to be confused with Session options discussed in the next section)\n",
     "\n",
-    "An example syntax is shown below. We restrict our discussion here to the last two arguments.\n",
+    "Some example code is shown below. We restrict our discussion here to the last two arguments.\n",
     "\n",
     "\n",
     "```minimize(\n",
@@ -82,7 +83,7 @@
     "- [nelder-mead](https://docs.scipy.org/doc/scipy/reference/optimize.minimize-neldermead.html#optimize-minimize-neldermead) Nelder-Mead algorithm.\n",
     "\n",
     "These, and most available classical optimization algorithms, are local minimizers, in that they use gradients to find local minima.\n",
-    "These algorithms have several options in common, but with subtle differences. For example, all have the option to specify a maximum number of iterations using the 'maxiter': 200 notation from above. All have some option specifying a different stopping criterion based on function or variable values, though these criteria are slightly different from one algorithm to the next. Cobyla, for example, allows you to specify a tolerance ('tol': 0.0001, e.g.) which is the lower bound on a \"trust region\", determined using gradients. In comparison, SLSQP lets you specify a goal in the precision of the function used in the stopping criterion ('ftol'). Nelder-Mead lets you specify a tolerance in the difference between successive parameter ($x$) guesses (xatol), and/or a tolerance in the difference between successive values obtained for the cost function $f(x)$ (fatol).\n",
+    "These algorithms have several options in common, but with subtle differences. For example, all have the option to specify a maximum number of iterations using the `'maxiter': 200` notation from above. All have some option specifying a different stopping criterion based on function or variable values, though these criteria are slightly different for different algorithms. Cobyla, for example, allows you to specify a tolerance (for example, `'tol': 0.0001`) that is the lower bound on a \"trust region\", determined by using gradients. In comparison, SLSQP lets you specify a goal in the precision of the function used in the stopping criterion ('ftol'). Nelder-Mead lets you specify a tolerance in the difference between successive parameter ($x$) guesses (xatol) or a tolerance in the difference between successive values obtained for the cost function $f(x)$ (fatol) (or both).\n",
     "For a complete list of available algorithms and options, visit [SciPy's minimize documentation](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html)."
    ]
   }
