update titles in nbs

--- a/learning/courses/utility-scale-quantum-computing/error-mitigation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/error-mitigation.ipynb
@@ -5,14 +5,14 @@
    "id": "fad91a68",
    "metadata": {},
    "source": [
-    "  # 11. Quantum Noise and Error Mitigation\n",
+    "  # Quantum noise and error mitigation\n",
     "\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "Toshinari Itoko (June 28, 2024)\n",
+    "Toshinari Itoko (28 June 2024)\n",
     "\n",
-    "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
+    "PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 1 m 40 s.*\n",
     "\n",
