--- a/learning/courses/utility-scale-quantum-computing/hardware.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/hardware.ipynb
@@ -5,7 +5,7 @@
    "id": "8fe3ca32",
    "metadata": {},
    "source": [
-    "# Lesson 09: Hardware\n",
+    "# Hardware\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
