--- a/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
@@ -6,7 +6,7 @@
    "id": "a94f5c51-348c-4fb0-9488-70ad4a19ace0",
    "metadata": {},
    "source": [
-    " # 7. Quantum Simulation\n",
+    " # Quantum simulation\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
