--- a/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/teleportation.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# 3. Quantum teleportation and superdense coding\n",
+    "# Quantum teleportation and superdense coding\n",
     "\n",
     "\n",
     "<Admonition type=\"note\">\n",
