--- a/learning/courses/utility-scale-quantum-computing/utility-i.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-i.ipynb
@@ -5,13 +5,13 @@
    "id": "39a1fd9b-a17f-486e-aa7a-38d46b867984",
    "metadata": {},
    "source": [
-    "# 12. Utility-Scale Experiment I\n",
+    "# Utility-scale experiment I\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "Tamiya Onodera (July 5, 2024)\n",
+    "Tamiya Onodera (5 July 2024)\n",
     "\n",
-    "PDFs of lecture notes will be available soon and please note that some code snippets may become deprecated since these are static images.\n",
+    "PDFs of lecture notes will be available soon. Note that some code snippets may become deprecated since these are static images.\n",
     "\n",
     "*Approximate QPU time to run this experiment is 45 seconds.*\n",
     "\n",
